[tool.poetry]
name = "powerschool-gsuite-sync"
version = "0.1.0"
description = "Scripts to support synchronizing active students in PowerSchool with G Suite for Education accounts"
authors = ["Scott Burns <sburns@centercitypcs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
centercitypcs-utils = "^0.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
